container/infra/k8s/dev/expense-tracker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      labels:
        app: expense-tracker
    spec:
      containers:
        - name: expense-tracker
          image: expense-tracker
---
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-srv
spec:
  selector:
    app: expense-tracker
  ports:
    - name: expense-tracker
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-nodeport
spec:
  type: NodePort
  selector:
    app: expense-tracker
  ports:
    - name: expense-tracker-nodeport
      protocol: TCP
      port: 3001
      targetPort: 3000
