container/infra/k8s/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: dev.test-server.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: expense-tracker-srv
              servicePort: 3000
